# FastAPI-Projects

projeto1/: converter.py  pyproject.toml  schemas.py
projetoapi/: Dockerfile  docker-compose.yml  pyproject.toml
projetoapi/app/: main.py
projetoapi/app/db/: models.py
projetoapi/app/migrations/: env.py
projetoapi/app/migrations/versions/: 201f2242ab49_add.py  8ad45f81f6c6_add.py  ae712526a3f6_add.py  efc2a0ca2cc3_add_categories_table.py
projetoapi/app/routes/: category_routes.py  deps.py  poc.py  product_routes.py  user_routes.py
projetoapi/app/schemas/: category.py  product.py  user.py
projetoapi/app/test/: conftest.py
projetoapi/app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routes.py
projetoapi/app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
projetoapi/app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py  test_user_use_cases.py
projetoapi/app/use_cases/: category.py  product.py  user.py
