[tool.poetry]
name = "projeto1"
version = "0.1.0"
description = ""
authors = ["vini"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
requests = "^2.32.3"
aiohttp = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
